--- a/navStyle.css
+++ b/navStyle.css
@@ -5,7 +5,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* box-shadow: 0 0 0 1px red inset; */
+  /*box-shadow: 0 0 0 1px red inset;*/
+}
+
+:root {
+  --white: #ffffff;
+  --blueDark: #0b0d17;
+  --blueWhite: #d0d6f9;
+}
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
 h1,
@@ -23,21 +34,45 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 5rem;
   margin-top: 2rem;
-  margin-left: 2rem;
+  padding-left: 2rem;
+  width: 100%;
+  position: relative;
 }
 
-nav {
+header img.logo {
+  position: absolute;
+  top: 1rem;
+}
+
+header img.iconHamburger {
+  position: absolute;
+  z-index: 999;
+  top: 2rem;
+  right: 2rem;
+  display: none;
+}
+
+nav.navNormal {
   float: right;
   display: flex;
-  padding: 2rem 5rem;
+  padding: 2rem 9rem;
   background-color: transparent;
   backdrop-filter: blur(50px);
+  box-shadow: 0px 0px 7px 0px rgba(255, 255, 255, 0.1);
+}
+
+nav.navMobile {
+  position: absolute;
+  top: 0;
+  right: -100rem;
 }
 
 nav ul {
   display: flex;
   list-style: none;
+  gap: 2.8rem;
 }
 
 nav ul li {
@@ -49,7 +84,7 @@ nav ul li a {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  padding: 0.7rem 1.5rem;
+  padding: 1.87rem 0;
   letter-spacing: 4.75px;
 }
 
@@ -67,21 +102,64 @@ nav ul li a .numNav {
 }
 
 @media (max-width: 768px) {
-  nav {
+  header {
+    margin-top: 0rem;
+  }
+
+  nav.navNormal {
     float: right;
     display: flex;
-    padding: 2rem 3rem;
-    backdrop-filter: blur(900px);
+    padding: 1.9rem 3rem;
   }
+
   nav ul li a {
+    padding: 1.87rem 0rem;
+  }
+
+  nav ul li a .numNav {
+    display: none;
+  }
+}
+
+@media (max-width: 400px) {
+  header img.iconHamburger {
+    display: inherit;
+    position: absolute;
+    z-index: 999;
+    top: 2rem;
+    right: 1rem;
+  }
+
+  nav.navNormal {
+    display: none;
+  }
+
+  nav.navMobile {
+    float: right;
+    right: 0;
+    display: flex;
+    padding: 2rem 3rem;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
+    box-shadow: 0px 0px 7px 0px rgba(255, 255, 255, 0.1);
+    height: 100vh;
+  }
+
+  nav.navMobile ul {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5rem;
+  }
+
+  nav.navMobile ul li a {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 1.87rem 0rem;
+    padding: 1rem 0rem;
     letter-spacing: 4.75px;
-    margin-right: 1rem;
   }
-  nav ul li a .numNav {
-    display: none;
+
+  nav.navMobile ul li a .numNav {
+    display: inherit;
   }
 }
