--- a/homeStyle.css
+++ b/homeStyle.css
@@ -6,4 +6,19 @@ body {
   object-fit: contain;
   height: 100vh;
   width: 100%;
+  color: #fff;
+}
+
+main {
+  display: flex;
+  gap: 5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 5rem;
+}
+
+main section,
+div.btnExplore {
+  width: 50%;
 }
