--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,10 +1,15 @@
+* {
+  /*box-shadow: 0 0 0 1px red inset;*/
+  box-sizing: border-box;
+}
+
 body {
   background: url('./assets/home/background-home-desktop.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: contain;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   color: #fff;
 }
@@ -14,11 +19,46 @@ main {
   gap: 5rem;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
-  padding: 5rem;
+  padding: 4rem 3rem;
+  margin-top: 5rem;
 }
 
-main section,
-div.btnExplore {
-  width: 50%;
+main section {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-right: 6rem;
 }
+
+main section p {
+  line-height: 1.8rem;
+  font-size: 1rem;
+}
+
+div.btnExplore {
+  width: 40%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-bottom: -10rem;
+}
+
+div.btnExplore a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  font-size: 1.4rem;
+  font-weight: 400;
+  clip-path: circle(40%);
+  background-color: #fff;
+  text-align: center;
+  padding: 5rem;
+  /*border: 10rem solid #979797;*/
+  /*box-shadow: 20px 20px 20px 100px rgba(0, 0, 0, 0.9);*/
+
+}
+
+div.btnExplore a:hover {}
