--- a/navStyle.css
+++ b/navStyle.css
@@ -23,11 +23,33 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Bellefair', serif;
+  font-family: 'Bellefair', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 9.375rem;
+}
+
+h2 {
+  font-size: 6.25rem;
+}
+
+h3 {
+  font-size: 3.5rem;
+}
+
+h4 {
+  font-size: 2rem;
 }
 
 h5 {
   font-family: 'Barlow Condensed', sans-serif;
+  font-size: 1.75rem;
+  letter-spacing: 4.75px;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
 header {
