--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,5 +1,5 @@
 * {
-  /*box-shadow: 0 0 0 1px red inset;*/
+  /* box-shadow: 0 0 0 1px red inset; */
   box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ body {
 
 main {
   display: flex;
-  gap: 5rem;
+  gap: 10rem;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -29,36 +29,46 @@ main section {
   width: 40%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding-right: 6rem;
+  justify-content: space-around;
+  padding-right: 2%;
+  margin-left: 1.5rem;
 }
 
-main section p {
-  line-height: 1.8rem;
-  font-size: 1rem;
-}
-
-div.btnExplore {
+div.boxExplore {
   width: 40%;
   display: flex;
-  align-items: flex-end;
   justify-content: center;
-  margin-bottom: -10rem;
+  align-items: end;
+  margin-bottom: -5rem;
+  margin-right: 3rem;
 }
 
-div.btnExplore a {
+div.boxExplore a {
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
   font-size: 1.4rem;
   font-weight: 400;
+  padding: 4rem;
   clip-path: circle(40%);
-  background-color: #fff;
-  text-align: center;
-  padding: 5rem;
-  /*border: 10rem solid #979797;*/
-  /*box-shadow: 20px 20px 20px 100px rgba(0, 0, 0, 0.9);*/
-
+  margin-right: -15rem;
+  transition: all 0.2s ease-in-out;
 }
 
-div.btnExplore a:hover {}
+.btnExplore {
+  color: #000;
+  font-size: 1.4rem;
+  font-weight: 400;
+  clip-path: circle(40%);
+  text-align: center;
+  padding: 7rem;
+  filter: drop-shadow(0px 0px 40px #979797);
+  background-color: #fff;
+}
+
+div.boxExplore a:hover {
+  background-color: rgba(145, 143, 143, 0.6);
+}
+
+@media (max-width: 1256px) {
+}
