--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,6 +1,5 @@
 * {
-  /* box-shadow: 0 0 0 1px red inset; */
-  box-sizing: border-box;
+  /*box-shadow: 0 0 0 1px red inset;*/
 }
 
 body {
@@ -8,67 +7,111 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  object-fit: contain;
-  height: 100%;
-  width: 100%;
   color: #fff;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 150px 2fr 4fr 1fr;
+}
+
+@media (max-width: 768px) {
+  body {
+    background: url('./assets/home/background-home-tablet.jpg');
+  }
 }
 
 main {
-  display: flex;
-  gap: 10rem;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  padding: 4rem 3rem;
-  margin-top: 5rem;
+  grid-column: 1 / span 12;
+  grid-row: 3 / span 1;
+  align-self: center;
+  justify-self: center;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 
 main section {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding-right: 2%;
-  margin-left: 1.5rem;
+  grid-column: 2 / span 5;
+  grid-row: 1 / span 1;
+  padding-right: 20%;
 }
 
-div.boxExplore {
-  width: 40%;
+
+main section * {
+  margin-bottom: 1.4rem;
+}
+
+main .boxBtnExplore {
+  grid-column: 9 / span 3;
+  grid-row: 1 / span 1;
+  align-self: end;
+  justify-self: end;
+  clip-path: circle(40%);
   display: flex;
   justify-content: center;
-  align-items: end;
-  margin-bottom: -5rem;
-  margin-right: 3rem;
+  align-items: center;
 }
 
-div.boxExplore a {
+div.boxBtnExplore a {
   text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
-  font-size: 1.4rem;
-  font-weight: 400;
-  padding: 4rem;
   clip-path: circle(40%);
-  margin-right: -15rem;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.7s ease-in-out;
+
 }
 
-.btnExplore {
+.btnHover p {
   color: #000;
-  font-size: 1.4rem;
   font-weight: 400;
-  clip-path: circle(40%);
+  font-size: 1.4rem;
+  text-transform: uppercase;
   text-align: center;
-  padding: 7rem;
-  filter: drop-shadow(0px 0px 40px #979797);
+  padding: 6rem;
   background-color: #fff;
 }
 
-div.boxExplore a:hover {
-  background-color: rgba(145, 143, 143, 0.6);
+@media (max-width: 1150px) {
+  main section {
+    padding-right: 8%;
+  }
 }
 
-@media (max-width: 1256px) {
+@media (max-width: 890px) {
+  main section {
+    padding-right: 0;
+  }
+
+  main .boxBtnExplore {
+    grid-column: 10 / span 3;
+    grid-row: 1 / span 1;
+    align-self: end;
+    justify-self: end;
+  }
+
+  .btnHover p {
+    padding: 5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-rows: repeat(2, 1fr);
+    text-align: center;
+  }
+
+  main section {
+    grid-column: 3 / -3;
+    grid-row: 1 / span 1;
+    align-self: center;
+    justify-self: center;
+  }
+
+  main .boxBtnExplore {
+    grid-column: 3 / -3;
+    grid-row: 2 / span 1;
+    align-self: center;
+    justify-self: center;
+    clip-path: circle(40%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
