--- a/Crew/crewStyle.css
+++ b/Crew/crewStyle.css
@@ -1,6 +1,7 @@
 body {
   background-image: url('../assets/crew/background-crew-desktop.jpg');
   background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 150px 30px 1fr 100px;
