--- a/Crew/crewStyle.css
+++ b/Crew/crewStyle.css
@@ -1,3 +1,13 @@
+* {
+  /* box-sizing: border-box; */
+  box-shadow: 0 0 0 1px red inset;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-image: url('../assets/crew/background-crew-desktop.jpg');
   background-repeat: no-repeat;
@@ -9,12 +19,12 @@ body {
 
 main {
   grid-column: 1 / span 12;
-  grid-row: 2 / span 3;
+  grid-row: 2 / span 4;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 30px 1fr;
   width: 100%;
-  row-gap: 2rem;
+  /* row-gap: 2rem; */
 }
 
 main div.meetTitle-box {
@@ -64,7 +74,10 @@ main .detail-box .text-crew {
   grid-column: 2 / span 4;
   grid-row: 2 / span 1;
   display: flex;
-  padding: 0rem 0rem 4rem 5px;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+  padding: 0rem 0rem 2rem 0px;
   margin-top: -2rem;
 }
 
@@ -78,7 +91,6 @@ main .detail-box .text-crew {
   height: 0.78rem;
   border-radius: 50%;
   background-color: #727376;
-  margin-right: 1.2rem;
   cursor: pointer;
   display: block;
   transition: 0.3s all ease-in-out;
@@ -88,7 +100,7 @@ main .detail-box .text-crew {
   background-color: #bdb6b6;
 }
 
-.crew-box input:checked+label {
+.crew-box input:checked + label {
   background-color: #fff;
 }
 
@@ -104,15 +116,7 @@ main .img-box {
 
 main .img-box img {
   width: 23rem;
-}
-
-.fade-in {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.show {
-  opacity: 1;
+  height: 100%;
 }
 
 @media (max-width: 890px) {
@@ -123,27 +127,38 @@ main .img-box img {
 
 @media (max-width: 768px) {
   body {
-    background-image: url('../assets/crew/background-crew-tablet.jpg');
+    background-image: url('../assets/crew/background-crew-desktop.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 150px 30px 1fr 100px;
+    display: flex;
+    flex-direction: column;
+    /* grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 150px auto; */
   }
 
   main {
-    grid-template-rows: 30px 1fr 1fr;
+    /* grid-column: 1 / span 12;
+    grid-row: 2 / -1;
+    display: grid; */
+    display: flex;
+    flex-direction: column;
+    /* grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 30px 1fr; */
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /* row-gap: 2rem; */
   }
 
   main .detail-box {
-    grid-column: 2 / span 10;
-    grid-row: 2 / span 1;
-    align-self: center;
-    justify-self: center;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 1rem;
   }
 
   main .detail-box h4 {
@@ -154,31 +169,37 @@ main .img-box img {
     font-size: 1rem;
     width: 80%;
     text-align: center;
-    padding: 0.4rem 0rem 3rem 0px;
+    padding: 0;
+    padding-bottom: 1rem;
   }
 
   .crew-box {
-    grid-column: 2 / span 10;
-    grid-row: 4 / span 1;
-    justify-self: flex-start;
+    justify-self: start;
     align-self: center;
-    padding: 0;
+    padding-top: 0.7rem;
+    width: 80%;
+    height: 100%;
   }
 
   main .img-box {
-    grid-column: 2 / span 10;
-    grid-row: 3 / -1;
-    align-self: end;
-    justify-self: center;
+    margin-top: -1.7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+    height: 100%;
   }
 
   main .img-box img {
-    width: 18rem;
+    width: 10rem;
+    align-self: center;
+    justify-self: center;
   }
 }
 
 @media (max-width: 350px) {
   main .img-box img {
-    width: 13rem;
+    /* width: 13rem; */
   }
 }
