--- a/Crew/crewStyle.css
+++ b/Crew/crewStyle.css
@@ -1,6 +1,8 @@
 * {
   /* box-sizing: border-box; */
   /* box-shadow: 0 0 0 1px red inset; */
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -138,18 +140,12 @@ main .img-box img {
   }
 
   main {
-    /* grid-column: 1 / span 12;
-    grid-row: 2 / -1;
-    display: grid; */
     display: flex;
     flex-direction: column;
-    /* grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 30px 1fr; */
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    /* row-gap: 2rem; */
   }
 
   main .detail-box {
@@ -195,11 +191,5 @@ main .img-box img {
     width: 10rem;
     align-self: center;
     justify-self: center;
-  }
-}
-
-@media (max-width: 350px) {
-  main .img-box img {
-    /* width: 13rem; */
   }
 }
