--- a/Crew/crewStyle.css
+++ b/Crew/crewStyle.css
@@ -127,6 +127,14 @@ main .img-box img {
   }
 }
 
+@media (max-height: 768px) {
+  body {
+    background-image: url('../assets/crew/background-crew-tablet.jpg');
+    background-repeat: repeat !important;
+    height: 100% !important;
+  }
+}
+
 @media (max-width: 768px) {
   body {
     background-image: url('../assets/crew/background-crew-desktop.jpg');
@@ -135,8 +143,8 @@ main .img-box img {
     color: #fff;
     display: flex;
     flex-direction: column;
-    /* grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 150px auto; */
+    width: 100%;
+    height: 100%;
   }
 
   main {
@@ -144,8 +152,6 @@ main .img-box img {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
   }
 
   main .detail-box {
@@ -185,6 +191,32 @@ main .img-box img {
     margin: 0;
     width: 100%;
     height: 100%;
+  }
+
+  main .img-box img {
+    width: 13rem;
+    align-self: center;
+    justify-self: center;
+  }
+}
+
+@media (max-width: 580px) and (min-width: 401px) {
+  h2 {
+    font-size: 2.5rem !important;
+  }
+
+  h4 {
+    font-size: 1.9rem;
+  }
+}
+
+@media (max-width: 400px) {
+  h2 {
+    font-size: 2rem !important;
+  }
+
+  h4 {
+    font-size: 1.5rem;
   }
 
   main .img-box img {
