--- a/Crew/crewStyle.css
+++ b/Crew/crewStyle.css
@@ -14,6 +14,7 @@ body {
   background-image: url('../assets/crew/background-crew-desktop.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
   color: #fff;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 150px 30px 1fr 100px;
@@ -26,6 +27,7 @@ main {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 30px 1fr;
   width: 100%;
+  height: 100%;
   /* row-gap: 2rem; */
 }
 
@@ -117,7 +119,7 @@ main .img-box {
 }
 
 main .img-box img {
-  width: 23rem;
+  width: 20rem;
   height: 100%;
 }
 
@@ -127,24 +129,17 @@ main .img-box img {
   }
 }
 
-@media (max-height: 768px) {
-  body {
-    background-image: url('../assets/crew/background-crew-tablet.jpg');
-    background-repeat: repeat !important;
-    height: 100% !important;
-  }
-}
-
 @media (max-width: 768px) {
   body {
     background-image: url('../assets/crew/background-crew-desktop.jpg');
+    background-color: #0b0e17;
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 100% !important;
   }
 
   main {
