--- a/homeStyle.css
+++ b/homeStyle.css
@@ -2,21 +2,20 @@
   /*box-shadow: 0 0 0 1px red inset;*/
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
-  background: url('./assets/home/background-home-desktop.jpg');
-  background-position: center center;
+  background: url('./assets/home/background-home-desktop.jpg') no-repeat center/cover;
+  /* background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   color: #fff;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 150px 2fr 4fr 1fr;
-}
-
-@media (max-width: 768px) {
-  body {
-    background: url('./assets/home/background-home-tablet.jpg');
-  }
 }
 
 main {
@@ -97,6 +96,10 @@ div.boxBtnExplore a:hover {
 }
 
 @media (max-width: 768px) {
+  body {
+    background: url('./assets/home/background-home-tablet.jpg');
+  }
+
   main {
     grid-template-rows: repeat(2, 1fr);
     text-align: center;
@@ -118,5 +121,34 @@ div.boxBtnExplore a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+
+@media (max-width: 380px) {
+  div.boxBtnExplore a {
+    clip-path: circle(90%);
+    padding: 2rem;
+  }
+
+  .btnHover p {
+    clip-path: circle(40%);
+    padding: 4rem;
+  }
+}
+
+@media (max-width: 270px) {
+  div.boxBtnExplore a {
+    clip-path: circle(90%);
+    padding: 2rem;
+  }
+
+  .btnHover p {
+    clip-path: circle(40%);
+    padding: 2.8rem;
+  }
+
+  .btnHover p {
+    font-size: 1rem;
   }
 }
