--- a/Technologie/technologyStyle.css
+++ b/Technologie/technologyStyle.css
@@ -4,6 +4,7 @@
 
 body {
   background-image: url('../assets/technology/background-technology-desktop.jpg');
+  background-color: #0f0e20;
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
@@ -110,15 +111,21 @@ main .detail-box .text-technology {
 
 main .img-box {
   grid-column: -1 / span 3;
-  grid-row: 1 / 4;
-  background: url('../assets/technology/image-launch-vehicle-portrait.jpg');
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 23rem;
-  height: 32rem;
+  grid-row: 2 / span 1;
+  width: 100%;
+  height: 100%;
   align-self: center;
   justify-self: center;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main .img-box img {
+  max-width: 100%;
+  max-height: auto;
+  object-fit: contain;
 }
 
 /*********************************************/
@@ -130,10 +137,6 @@ main .img-box {
 
   main .detail-box .text-technology {
     padding: 0;
-  }
-
-  main .img-box imd {
-    width: 15rem;
   }
 }
 
@@ -176,12 +179,8 @@ main .img-box {
   }
 
   main .img-box {
-    background: url('../assets/technology/image-launch-vehicle-landscape.jpg');
     grid-column: 1 / span 12;
     grid-row: 2 / 3;
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-position: center center;
     height: 100%;
     width: 100%;
     align-self: center;
