--- a/navStyle.css
+++ b/navStyle.css
@@ -1,277 +1,1 @@
-/*Importation des polices*/
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /*box-shadow: 0 0 0 1px red inset;*/
-}
-
-:root {
-  --white: #ffffff;
-  --blueDark: #0b0d17;
-  --blueWhite: #d0d6f9;
-}
-
-html {
-  width: 100%;
-  height: 100%;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: 'Bellefair', sans-serif;
-  text-transform: uppercase;
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-size: 8rem;
-}
-
-h2 {
-  font-size: 6rem;
-}
-
-h3 {
-  font-size: 4rem;
-}
-
-h4 {
-  font-size: 3rem;
-}
-
-h5 {
-  font-family: 'Barlow Condensed', sans-serif;
-  font-size: 2rem;
-  letter-spacing: 4.75px;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-p {
-  line-height: 1.8rem;
-  font-size: 1rem;
-}
-
-label {
-  font-family: 'Bellefair', sans-serif;
-}
-
-body {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 150px;
-  height: 100%;
-}
-
-header {
-  grid-column: 1 / span 12;
-  grid-row: 1 / 2;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  z-index: 9999;
-}
-
-header > a {
-  grid-column: 3 / span 1;
-  grid-row: 2 / span 2;
-  align-self: center;
-  justify-self: end;
-}
-
-header img.iconHamburger {
-  cursor: pointer;
-  grid-column: -3 / span 1;
-  grid-row: 2 / span 1;
-  align-self: center;
-  justify-self: center;
-  width: 37px;
-  z-index: 999;
-  display: none;
-}
-
-nav.navNormal {
-  grid-column: -1 / span 7;
-  grid-row: 2 / span 2;
-  padding: 2rem 6rem;
-  background-color: transparent;
-  -webkit-backdrop-filter: blur(50px);
-  backdrop-filter: blur(50px);
-  box-shadow: 0px 0px 7px 0px rgba(255, 255, 255, 0.1);
-  text-align: center;
-}
-
-nav.navMobile {
-  position: absolute;
-  right: 0;
-  left: -100%;
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-  padding: 2rem;
-  height: 100% !important;
-  width: 85%;
-  box-shadow: 0px 0px 7px 0px rgba(255, 255, 255, 0.1);
-  display: none;
-}
-
-nav ul {
-  display: flex;
-  list-style: none;
-  gap: 3rem;
-}
-
-nav ul li {
-  font-family: 'Barlow Condensed', sans-serif;
-  font-size: 16px;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 1.4rem 0;
-  letter-spacing: 4.75px;
-}
-
-nav ul li a:hover {
-  border-bottom: 2px solid #979797;
-}
-
-nav ul li a.active {
-  border-bottom: 2px solid #fff;
-}
-
-nav ul li a .numNav {
-  font-weight: bold;
-  margin-right: 0.7rem;
-}
-
-@media (max-width: 830px) {
-  nav.navNormal {
-    padding: 2rem 2.3rem;
-  }
-
-  nav ul {
-    gap: 2rem;
-  }
-}
-
-@media (max-width: 768px) {
-  h1 {
-    font-size: 6rem;
-  }
-
-  h2 {
-    font-size: 4.5rem;
-  }
-
-  h3 {
-    font-size: 3rem;
-  }
-
-  h4 {
-    font-size: 1.8rem;
-  }
-
-  h5 {
-    font-family: 'Barlow Condensed', sans-serif;
-    font-size: 1rem;
-    letter-spacing: 4.75px;
-    text-transform: uppercase;
-    font-weight: 400;
-  }
-
-  header .barHori {
-    display: none;
-  }
-
-  header > a {
-    grid-column: 2 / span 1;
-    grid-row: 1 / span 2;
-    align-self: center;
-    justify-self: end;
-  }
-
-  nav.navNormal {
-    grid-column: -1 / span 7;
-    grid-row: 1 / span 2;
-  }
-
-  nav ul li a .numNav {
-    display: none;
-  }
-}
-
-@media (max-width: 650px) {
-  nav.navNormal {
-    padding: 2rem 2rem;
-  }
-}
-
-@media (max-width: 580px) {
-  h1 {
-    font-size: 4rem;
-  }
-
-  h2 {
-    font-size: 3.7rem;
-  }
-
-  h3 {
-    font-size: 2.3rem;
-  }
-
-  h4 {
-    font-size: 1.5rem;
-  }
-
-  h5 {
-    font-family: 'Barlow Condensed', sans-serif;
-    font-size: 0.8rem;
-    letter-spacing: 4.75px;
-    text-transform: uppercase;
-    font-weight: 400;
-  }
-
-  header > a {
-    grid-column: 2 / span 1;
-    grid-row: 2 / span 2;
-    align-self: center;
-    justify-self: center;
-  }
-
-  header img.iconHamburger {
-    display: inherit;
-    grid-row: 2 / span 2;
-  }
-
-  nav.navNormal {
-    display: none;
-  }
-
-  nav.navMobile ul {
-    display: flex;
-    flex-direction: column;
-    padding-top: 7rem;
-    height: 100% !important;
-  }
-
-  nav.navMobile ul li a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 0.4rem 0rem;
-    letter-spacing: 4.75px;
-  }
-
-  nav.navMobile ul li a .numNav {
-    display: inherit;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');*{margin:0;padding:0;box-sizing:border-box}:root{--white:#fff;--blueDark:#0b0d17;--blueWhite:#d0d6f9}html{width:100%;height:100%}h1,h2,h3,h4{font-family:'Bellefair',sans-serif;text-transform:uppercase;font-weight:400;margin:0;padding:0}h1{font-size:8rem}h2{font-size:6rem}h3{font-size:4rem}h4{font-size:3rem}h5{font-family:'Barlow Condensed',sans-serif;font-size:2rem;letter-spacing:4.75px;text-transform:uppercase;font-weight:400}p{line-height:1.8rem;font-size:1rem}label{font-family:'Bellefair',sans-serif}body{display:grid;grid-template-columns:repeat(12,1fr);grid-template-rows:150px;height:100%}header{grid-column:1 / span 12;grid-row:1 / 2;display:grid;grid-template-columns:repeat(12,1fr);grid-template-rows:repeat(4,1fr);z-index:9999}header>a{grid-column:3 / span 1;grid-row:2 / span 2;align-self:center;justify-self:end}header img.iconHamburger{cursor:pointer;grid-column:-3 / span 1;grid-row:2 / span 1;align-self:center;justify-self:center;width:37px;z-index:999;display:none}nav.navNormal{grid-column:-1 / span 7;grid-row:2 / span 2;padding:2rem 6rem;background-color:transparent;-webkit-backdrop-filter:blur(50px);backdrop-filter:blur(50px);box-shadow:0 0 7px 0 rgba(255,255,255,0.1);text-align:center}nav.navMobile{position:absolute;right:0;left:-100%;-webkit-backdrop-filter:blur(15px);backdrop-filter:blur(15px);padding:2rem;height:100% !important;width:85%;box-shadow:0 0 7px 0 rgba(255,255,255,0.1);display:none}nav ul{display:flex;list-style:none;gap:3rem}nav ul li{font-family:'Barlow Condensed',sans-serif;font-size:16px}nav ul li a{color:#fff;text-decoration:none;text-transform:uppercase;padding:1.4rem 0;letter-spacing:4.75px}nav ul li a:hover{border-bottom:2px solid #979797}nav ul li a.active{border-bottom:2px solid #fff}nav ul li a .numNav{font-weight:bold;margin-right:.7rem}@media(max-width:830px){nav.navNormal{padding:2rem 2.3rem}nav ul{gap:2rem}}@media(max-width:768px){h1{font-size:6rem}h2{font-size:4.5rem}h3{font-size:3rem}h4{font-size:1.8rem}h5{font-family:'Barlow Condensed',sans-serif;font-size:1rem;letter-spacing:4.75px;text-transform:uppercase;font-weight:400}header .barHori{display:none}header>a{grid-column:2 / span 1;grid-row:1 / span 2;align-self:center;justify-self:end}nav.navNormal{grid-column:-1 / span 7;grid-row:1 / span 2}nav ul li a .numNav{display:none}}@media(max-width:650px){nav.navNormal{padding:2rem 2rem}}@media(max-width:580px){h1{font-size:4rem}h2{font-size:3.7rem}h3{font-size:2.3rem}h4{font-size:1.5rem}h5{font-family:'Barlow Condensed',sans-serif;font-size:.8rem;letter-spacing:4.75px;text-transform:uppercase;font-weight:400}header>a{grid-column:2 / span 1;grid-row:2 / span 2;align-self:center;justify-self:center}header img.iconHamburger{display:inherit;grid-row:2 / span 2}nav.navNormal{display:none}nav.navMobile ul{display:flex;flex-direction:column;padding-top:7rem;height:100% !important}nav.navMobile ul li a{color:#fff;text-decoration:none;text-transform:uppercase;padding:.4rem 0rem;letter-spacing:4.75px}nav.navMobile ul li a .numNav{display:inherit}}
